--- a/src/css/dnd.css
+++ b/src/css/dnd.css
@@ -243,7 +243,6 @@ svg {
 .sortable {
     --tw-bg-opacity: 1;
     background-color: rgba(79,136,198,var(--tw-bg-opacity));
-    border-radius: .5rem;
     cursor: move;
     font-weight: 700;
     padding: 1rem;
@@ -284,16 +283,17 @@ svg {
 
 .column-header {
     --tw-bg-opacity: 1;
-    background-color: rgba(255,255,255,var(--tw-bg-opacity));
     --tw-border-opacity: 1;
-    border-color: rgba(170,189,223,var(--tw-border-opacity));
     border-width: 1px;
-    border-bottom-width: 0px;
+    border-top-width: 0px;
     cursor: move;
-    font-weight: 700;
-    padding: .75rem;
+    font-weight: 200;
+    padding: .1rem;
     text-align: center
 }
+
+
+
 
 .container {
     width: 100%
