--- a/src/app.css
+++ b/src/app.css
@@ -36,5 +36,5 @@ body {
   --tw-text-opacity: 1;
   color: rgba(255,255,255,var(--tw-text-opacity));
   white-space: normal;
-  touch-action: none;
+  touch-action: none
 }
